refactor : 메서드를 활용해 필드 정리